# talk-cloudland-2023

./: .clang-format  .editorconfig  .gitignore  LICENSE  README.md
01_cpp-example/: .gitignore  Makefile  cpp-example  main.cpp
01_cpp-example/.cache/clangd/index/: main.cpp.FF9351115E993591.idx
02_rust-example/src/: main.rs
03_go-example/: Makefile  main.go
03_nodescript_operator/: Cargo.toml  Dockerfile  Makefile
03_nodescript_operator/src/: crd.rs
04_nodescript_operator/: .gitignore  Cargo.toml  nodescript.yaml
04_nodescript_operator/src/: crd.rs  main.rs
XX_cpp-crash/: Makefile  cpp-crash  main.cpp
XX_go-sdk-operator/: Makefile  PROJECT  README.md  go.mod  main.go
XX_go-sdk-operator/api/v1alpha1/: groupversion_info.go  secrettemplate_types.go  zz_generated.deepcopy.go
XX_go-sdk-operator/config/crd/: kustomization.yaml
XX_go-sdk-operator/config/default/: kustomization.yaml
XX_go-sdk-operator/config/manager/: manager.yaml
XX_go-sdk-operator/config/manifests/: kustomization.yaml
XX_go-sdk-operator/config/prometheus/: monitor.yaml
XX_go-sdk-operator/config/rbac/: auth_proxy_client_clusterrole.yaml  auth_proxy_role.yaml  auth_proxy_role_binding.yaml  auth_proxy_service.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  secrettemplate_editor_role.yaml  secrettemplate_viewer_role.yaml  service_account.yaml
XX_go-sdk-operator/config/samples/: go-example_v1alpha1_secrettemplate.yaml  kustomization.yaml
XX_go-sdk-operator/controllers/: secrettemplate_controller.go  suite_test.go
(+3 files in other folders)
